[package]
name = "brainseed"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bdk = { version = "0.22.0", default-features = false, features = ["keys-bip39"] }
clap = { version = "3.2.17", features = ["derive"] }
rpassword = "7.0.0"
sha2 = "0.10.2"
